<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">
<FrameLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/vector"
            android:alpha="0.2"
            android:layout_weight="0.5">


        </ImageView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:alpha="0.2"
            android:src="@drawable/vector">


        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rcrc"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_marginRight="20dp">
            <ImageView
                android:layout_width="50dp"
                android:padding="15dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_email"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_textInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"

                android:hint="Email"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rcrc"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp">
            <ImageView
                android:layout_width="50dp"
                android:padding="15dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_mdp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:hint="Mot de passe" />
                <ImageView
                    android:id="@+id/eye"
                    android:padding="15dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_seemdp"
                    android:layout_alignEnd="@+id/password_textInput"/>

            </RelativeLayout>

        </LinearLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="mot de passe oublié ?"

            android:textColor="@android:color/black"
            android:paddingRight="20dp"/>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp">
    <ProgressBar

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/colorPrimary"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/login_button_text"
            android:textColor="@color/TextColor"
            android:textSize="17dp" />

</FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Ou"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/line" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_marginRight="20dp">

            <RelativeLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/fbcolor"
                android:layout_margin="11dp"
                >

                <ImageView
                    android:padding="9dp"

                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/social"/>
            </RelativeLayout>

            <Button

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@android:color/black"
                android:text="@string/login_fb_text"
                android:textColor="@color/TextColor"

                android:textSize="13dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_here"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/TextColor"/>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>



    <include layout="@layout/bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>